--- a/index.html
+++ b/index.html
@@ -980,35 +980,34 @@ Web上にアップロードすることでAIに学習される可能性のある
   }
 
 function filter(){
-  const q = normalize(input ? input.value : "");
+  const qRaw = (input && input.value) ? input.value : "";
+  const q = normalize(qRaw);
 
-  // 検索中フラグ
+  // 検索中フラグ（レイアウト切替用）
   document.body.classList.toggle("is-searching", q !== "");
 
-  // 検索中に隠す要素
+  // 検索中に隠す要素（目次や上部リンク等）
   hideOnSearch.forEach(el => {
     el.classList.toggle("hidden", q !== "");
   });
 
-  // ハイライト解除
+  // ハイライトを全部消す
   items.forEach(it => clearHighlights(it));
 
-  // ▼ ここが重要
-  if (resultHint) {
-    resultHint.classList.remove("hidden");
-  }
+  // resultHint は常に表示（検索結果0件でも表示したいので）
+  if (resultHint) resultHint.classList.remove("hidden");
 
+  // 未入力なら全部表示に戻す
   if(!q){
     items.forEach(it => it.classList.remove("hidden"));
     tocLinks.forEach(a => a.classList.remove("hidden"));
-
     if (resultHint) {
-      resultHint.textContent =
-        "検索すると、該当しない質問は非表示になります。";
+      resultHint.textContent = "検索すると、該当しない質問は非表示になります。";
     }
     return;
   }
 
+  // 検索実行
   let hitCount = 0;
 
   items.forEach(it => {
@@ -1016,32 +1015,31 @@ function filter(){
     const aText = normalize(it.getAttribute("data-a"));
     const bodyText = normalize(it.textContent);
 
-    const hit =
-      qText.includes(q) ||
-      aText.includes(q) ||
-      bodyText.includes(q);
+    const hit = qText.includes(q) || aText.includes(q) || bodyText.includes(q);
 
-    if(hit){
+    if (hit){
       it.classList.remove("hidden");
       hitCount++;
-      highlight(it, input.value.trim());
-    }else{
+      highlight(it, qRaw.trim()); // 入力そのままでハイライト
+    } else {
       it.classList.add("hidden");
     }
   });
 
-  // 目次リンク連動
+  // 目次リンク連動（該当記事が非表示なら目次も非表示）
   tocLinks.forEach(a => {
-    const id = a.getAttribute("href");
-    const target = id ? $(id) : null;
+    const href = a.getAttribute("href");
+    if(!href || !href.startsWith("#")) return;
+
+    const target = $(href);
     if(!target) return;
+
     a.classList.toggle("hidden", target.classList.contains("hidden"));
   });
 
-  // ▼ 検索中は必ず件数を表示
-  if (resultHint) {
-    resultHint.textContent = `検索結果: ${hitCount} 件`;
-  }
+  // 検索中は必ず件数表示
+  if (resultHint) resultHint.textContent = `検索結果: ${hitCount} 件`;
+}
 }
 
   });
