--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@ body.is-searching #tocPanel{
               <b>はい。</b><hr>
                 縮小、拡大、回転、色変更、影や光の追加、トリミング、ファイル名変更、透過加工、一部を切り抜いて別のパーツとして加工するなどの処理は許可しております。<br>
                 <br>
-                素材を他作者様による素材との合成は、"作者アオバト側は"問題ございませんが、組み合わせる他の素材の作者様のご意向は把握しておりません。素材作者に関する誤認や問題が発生しないように厳重にご注意ください。
+                素材を他作者様による素材との合成は、<b>作者アオバト側は</b>b問題ございませんが、組み合わせる他の素材の作者様のご意向は把握しておりません。素材作者に関する誤認や問題が発生しないように厳重にご注意ください。
               </div>
               <div class="meta">
                 <a class="backtop" href="#top">ページ上部へ</a>
